Update common module: fixes and improvements